Refactor UIConfigTest to use instance methods and improve resource loading; enhance test coverage for font settings and logging behavior.